--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<a href="resume.pdf" class="resume-link">Download My Resume</a>
 
 </body>
 </html> 
