--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Kevin Markes Medina</h1>
 <a href="resume.pdf" class="resume-link">Download My Resume</a>
 
 </body>
