--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1>Kevin Markes Medina</h1>
-<a href="resume.pdf" class="resume-link">Download My Resume</a>
+<a href="resume.pdf" class="resume-link">View My Resume</a>
 
 </body>
 </html> 
