--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-<h1>Kevin Markes Medina</h1>
+<h1 style="text-align:center">Kevin Markes Medina</h1>
 <a href="resume.pdf" class="resume-link">View My Resume</a>
 
 </body>
