--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1 style="text-align:center">Kevin Markes Medina</h1>
-<div href="resume.pdf" class="resume-link">View My Resume</div>
+<div href="/resume.pdf" class="resume-link">View My Resume</div>
 
 </body>
 </html> 
