--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <link rel="stylesheet" href="styles.css">
 <html>
 <body>
+<div class="con">
+<div class="background-container">
 
-<h1 style="text-align:center">Kevin Markes Medina</h1>
-<div href="/resume.pdf" class="resume-link">View My Resume</div>
+<h1>Kevin Markes Medina</h1>
 
+<a href="resume.pdf">View My Resume</a>
+</div>
+</div>
 </body>
 </html> 
