--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
- <!DOCTYPE html>
-<link rel="stylesheet" href="styles.css">
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Kevin Markes Medina</title>
+</head>
 <body>
-<div class="con">
-<div class="background-container">
+    <div class="background-container">
+        <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 60px; font-weight: bold;">Kevin Markes Medina</h1>
+        <a class="resume-link" href="resume.pdf">View My Resume</a>
+        <a class="resume-link" href="https://www.linkedin.com/in/kevin-medina-16544a161/">Checkout my LinkedIn</a>
+    <div id="currentTime"></div>
 
-<h1>Kevin Markes Medina</h1>
-
-<a href="resume.pdf">View My Resume</a>
-</div>
-</div>
+    <script src="script.js"></script> 
+    </div>
+    
 </body>
-</html> 
+</html>
